[package]
name = "chatbox"
version = "0.1.0"
authors = ["Daniel Hanson <danielghanson93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
futures-locks = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.8"
actix = "0.8"
actix-web = "1.0"
actix-files = "0.1"
actix-session = "0.1"
actix-web-actors = "1.0"

[[bin]]
name = "chatbox"
path = "main.rs"
